--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -61,7 +61,7 @@
 }
 
 .experience-details {
-    margin-left: 0.6rem;
+    margin-left: 1.5rem;
 }
 
 .experience-details > h6 {
@@ -141,6 +141,10 @@
         padding: 1rem;
         margin-bottom: 1.5rem;
         height: 130px;
+    }
+    .svg-invert {
+        -webkit-filter: invert(100%); /* safari 6.0 - 9.0 */
+                filter: invert(100%);
     }
     .expcard-img {
         border-radius: 50%;
