--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -6,30 +6,168 @@
 .experience{
     min-height: 50vh;
 }
+.experience {
+    min-height: 100vh;
+    position: relative;
+}
+
+.experience .line-styling{
+  position: absolute;
+  top: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 50px;
+  width: 85%;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.experience .line-styling .style-circle{
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+}
+.experience .line-styling .style-line{
+  width: 95%;
+  height: 5px;
+  border-radius: 10px;
+}
 
 .experience-body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
-    width: 100%;
+    justify-content: space-around;
+    padding-top: 8rem;
+    height: fit-content;
 }
 
 .experience-description {
-    width: 100%;
-    flex: 0.65;
-    padding: 2rem;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
-    justify-content: center;
-    margin-right: 2rem;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    flex: 0.5;
+    width: 100%;
+    height: fit-content;
 }
 
-.experience-description > h1 {
+.experience-description >h2 {
+    margin-bottom: 40px;
     font-size: 3.5rem;
     font-family: var(--primaryFont);
-    margin-bottom: 2rem;
+    text-align: center;
+}
+
+.experience-description > p {
+    font-size: 1.25rem;
+    color: #e0d9d9;
+    font-family: var(--primaryFont);
+}
+
+.experience-img {
+  border-radius: 25px;
+    margin-top: 40px;
+    pointer-events: none;
+}
+
+.experience-img > img {
+  border-radius:380px;
+    width: 380px;
+    flex: 0.5;
+}
+
+@media (min-width: 992px) and (max-width: 1380px) {
+
+    .experience-description > h2 {
+      font-size: 3.3rem;
+      margin-bottom: 30px;
+    }
+    .experience-description > p {
+      font-size: 1.15rem;
+    }
+
+    .experience-img>img {
+        width: 300px;
+    } 
+}
+
+@media screen and (max-width: 992px){
+
+  .experience .line-styling{
+    top: 20px;
+  }
+
+    .experience-body {
+        padding-top: 2rem;
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+
+    .experience-description{
+        flex: 0.6;
+        box-sizing: border-box;
+        /* padding: 5% 10%; */
+        padding: 20px;
+
+    }
+
+    .experience-description > h2 {
+        font-size: 3rem;
+        margin-bottom: 20px;
+    }
+
+    .experience-description > p {
+        font-size: 1.1rem;
+    }
+
+    .experience-img > img {
+        width: 250px;
+        flex: 0.4;
+    }
+
+}
+
+@media screen and (max-width: 800px){
+  .experience .line-styling .style-circle{
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+  }
+  .experience-description > h2{
+    align-self: center;
+  }
+
+}
+
+@media screen and (max-width: 600px){
+
+  .experience .line-styling .style-circle{
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+  }
+  .experience .line-styling .style-line{
+    width: 93%;
+    height: 3px;
+    border-radius: 10px;
+  }
+
+  .experience-description > h2 {
+    font-size: 2.5rem;
+  }
+
+    .experience-description > p{
+      font-size: 0.95rem;
+    }
+
+    .experience-img > img {
+        width: 200px;
+    }
 }
 
 .experience-card {
@@ -62,6 +200,7 @@
 
 .experience-details {
     margin-left: 1.5rem;
+    flex:0.65;
 }
 
 .experience-details > h6 {
@@ -75,6 +214,7 @@
     font-family: var(--primaryFont);
     font-size: 1.225rem;
     font-weight: 600;
+    text-align: center;
 }
 
 .experience-details > h5 {
@@ -111,16 +251,10 @@
     .experience {
         min-height: 100%;
     }
-    .experience-image {
+    /* .experience-image {
         display: none;
-    }
-    .experience-description {
-        flex: 1;
-        margin: auto;
-    }    
-    .experience-description > h1{
-        font-size: 3.2rem;
-    }
+    } */
+
     .experience-card {
         width: 100%;
         padding: 1.5rem;
@@ -134,9 +268,7 @@
         margin-bottom: 2rem;
         align-self: center;
     }
-    .experience-description {
-        padding: 1rem;
-    }
+   
     .experience-card {
         padding: 1rem;
         margin-bottom: 1.5rem;
