--- a/src/components/Achievement/Achievement.css
+++ b/src/components/Achievement/Achievement.css
@@ -16,6 +16,13 @@
     width: 90%;
 }
 
+.achievement-body p {
+    font-family: var(--primaryFont);
+    font-style: normal;
+    font-weight: normal;
+    font-size: 1.15rem;
+}
+
 .achievement-body h1 {
     font-family: var(--primaryFont);
     font-size: 3.5rem;
