--- a/src/components/Achievement/Achievement.css
+++ b/src/components/Achievement/Achievement.css
@@ -39,7 +39,7 @@
     padding: 2rem;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
     margin-left: 5%;
     width: 100%;
@@ -55,9 +55,9 @@
 .achievement-card {
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-between;
-    height: 170px;
+    height: fit-content;
     padding: 1.5rem;
     border-radius: 20px;
     margin-bottom: 1.5rem;
@@ -121,12 +121,14 @@
 }
 
 .achievecard-details1 p {
-    font-size: 1.10rem;
-    font-family: Roboto;
-    font-weight: 400;
+    font-family: var(--primaryFont);
+    font-weight: normal;
+    font-size: 1.0rem;
+    line-height: 140%;
 }
 
 .achievecard-imgcontainer {
+    align-items: center;
     width: 23%;
     height: 10;
 }
