--- a/src/components/Clients/Clients.css
+++ b/src/components/Clients/Clients.css
@@ -7,6 +7,22 @@
     padding: 2.5rem 2rem 2rem 2rem;
 }
 
+.client--name{
+    justify-content: center;
+    align-items: center;
+}
+
+
+.client--name h3{
+    font-family: var(--primaryFont);
+    font-size: 20px;
+    margin-top: 1rem;
+    text-align: center;
+    max-width: 200px;
+    justify-content: center;
+    align-items: center;
+}
+
 .clientsHeader {
     display: flex;
     align-items: center;
@@ -54,7 +70,7 @@
 .client--box {
     background: #FAFAFA;
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.12);
-    border-radius: 10px;
+    border-radius: 35px;
     width: 160px;
     height: 160px;
     margin: 1.5rem;
@@ -77,7 +93,7 @@
 }
 
 
-.client--box h6 {
+.client--scroll h6 {
     font-family: var(--primaryFont);
     font-style: bold;
     font-weight: 300;
@@ -119,7 +135,6 @@
     .client--box {
         width: 150px;
         height: 150px;
-        margin: 1.2rem;
         padding: 2rem 1rem;
     }
 
@@ -128,10 +143,7 @@
     }
 
 
-    .client--box h3 {
-        font-size: 20px;
-        margin-top: 1rem;
-    }
+  
 
 }
 
@@ -168,9 +180,10 @@
         font-size: 2.5rem;
     }
 
-    .client--box h3 {
+    .client--name h3 {
         font-size: 18px;
         margin-top: 1rem;
+        font-family: var(--primaryFont);
     }
 }
 
