--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -8,6 +8,8 @@
 
 .experience{
     min-height: 50vh;
+    padding: 7rem;
+    font-family: var(--primaryFont);
 }
 .experience {
     min-height: 100vh;
@@ -17,18 +19,39 @@
 .experience-body {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-around;
-    padding-top: 8rem;
     height: fit-content;
 }
 
+.experience-card-description{
+    align-items: center;
+    justify-content: center;
+}
+
+.experience-list{
+    padding-right: 2.5%;
+    padding-bottom: 2.5%;
+}
+
+.experience-column-left {
+    padding-bottom: 2.5%;
+}
 .experience-description {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-evenly;
-    flex: 0.5;
+    width: 100%;
+    height: fit-content;
+}
+
+.experience-card-description {
+    display: flex;
+    margin-left: 20px;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-evenly;
     width: 100%;
     height: fit-content;
 }
@@ -36,25 +59,28 @@
 .experience-description >h2 {
     margin-bottom: 40px;
     font-size: 3.5rem;
-    font-family: var(--primaryFont);
+   
     text-align: center;
 }
 
 .experience-description > p {
     font-size: 1.25rem;
     color: #e0d9d9;
-    font-family: var(--primaryFont);
 }
 
-.experience-img {
-  border-radius: 25px;
-    margin-top: 40px;
+.experience-image > img{
     pointer-events: none;
+    width: 90%;
 }
+
+.expcard-img > img {
+    width: 50%;
+    flex: 0.5;
+}
+
 
 .experience-img > img {
-  border-radius:380px;
-    width: 380px;
+    width: 50%;
     flex: 0.5;
 }
 
@@ -67,10 +93,6 @@
     .experience-description > p {
       font-size: 1.15rem;
     }
-
-    .experience-img>img {
-        width: 300px;
-    } 
 }
 
 @media screen and (max-width: 992px){
@@ -91,6 +113,15 @@
         padding: 20px;
 
     }
+
+    .experience-card-description{
+        flex: 0.6;
+        box-sizing: border-box;
+        /* padding: 5% 10%; */
+        padding: 20px;
+
+    }
+
 
     .experience-description > h2 {
         font-size: 3rem;
@@ -134,10 +165,9 @@
 .experience-card {
     display: flex;
     flex-direction: row;
-    align-items:flex-start;
-    justify-content: flex-start;
-    width: 90%;
-    height: 140px;
+    align-items:center;
+    justify-content: center;
+
     padding: 1.5rem;
     border-radius: 20px;
     margin-bottom: 1.5rem;
@@ -145,9 +175,9 @@
 }
 
 .expcard-img {
-    border-radius: 50%;
-    width: 55px;
-    height: 55px;
+    border-radius: 29%;
+    width: 100px;
+    height: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -155,7 +185,7 @@
 }
 
 .expcard-img > img {
-    width: 36px;
+    flex: 0.6;
     pointer-events: none;
 }
 
@@ -165,121 +195,29 @@
 }
 
 .experience-details > h6 {
-    font-family: var(--primaryFont);
     font-size: 0.85rem;
     font-weight: 700;
     margin-bottom: 0.5rem;
 }
 
 .experience-details > h4 {
-    font-family: var(--primaryFont);
     font-size: 1.225rem;
     font-weight: 600;
     text-align: center;
 }
 
 .experience-details > h5 {
-    font-family: var(--primaryFont);
     font-size: 1.15rem;
     font-weight: 600;
-}
-
-.experience-image {
-    box-sizing: border-box;
-    padding: 1rem;
-    flex: 0.35;
-    margin-left: 7%;
-    margin-top: 1rem;
-    pointer-events: none;
-}
-
-.experience-image > img {
-    width: 100%;
-    pointer-events: none;
+    text-align: center;
 }
 
 
 
 
 
-
-@media (min-width: 992px) and (max-width: 1380px) {
-
-}
-
-
-@media screen and (max-width: 992px) {
-    .experience {
-        min-height: 100%;
-    }
-    /* .experience-image {
-        display: none;
-    } */
-
-    .experience-card {
-        width: 100%;
-        padding: 1.5rem;
-        margin-bottom: 1.5rem;
-    }
-}
-
-@media screen and (max-width: 800px) {
-    .experience-description > h1{
-        font-size: 3rem;
-        margin-bottom: 2rem;
-        align-self: center;
-    }
-   
-    .experience-card {
-        padding: 1rem;
-        margin-bottom: 1.5rem;
-        height: 130px;
-    }
-    .svg-invert {
-        -webkit-filter: invert(100%); /* safari 6.0 - 9.0 */
-                filter: invert(100%);
-    }
-    .expcard-img {
-        border-radius: 50%;
-        width: 45px;
-        height: 45px;
-    }
-    
-    .expcard-img > img {
-        width: 30px;
-    }
-    .experience-details > h6 {
-        font-size: 0.85rem;
-        margin-bottom: 0.45rem;
-    }
-    
-    .experience-details > h4 {
-        font-size: 1.125rem;
-        line-height: 126%;
-    }
-    
-    .experience-details > h5 {
-        font-size: 1.05rem;
-        line-height: 126%;
-    }
-}
-
-@media screen and (max-width: 600px) {
-    .experience-description > h1{
-        font-size: 2.5rem;
-    }
-}
-
-@media screen and (max-width: 400px) {
-
-}
-  
 @media only screen and (min-device-width: 320px) and (max-device-width: 
   480px) and (-webkit-device-pixel-ratio: 2) and (device-aspect-ratio: 2/3) {
 
 }
 
-
-@media only screen and (device-width: 768px) {
-
-}
