--- a/src/pages/ProjectDetail/projectDetail.css
+++ b/src/pages/ProjectDetail/projectDetail.css
@@ -1,18 +1,21 @@
-.landing {
+.project-detail {
   align-items: center;
   justify-content: center;
+  display: flex;
+  flex: 100%;
 }
 
-.landing--container {
+.project-detail--container {
   display: flex;
   flex: 100%;
   align-items: center;
   justify-content: center;
   height: 100%;
   position: relative;
+  display: flex;
 }
 
-.landing--img {
+.project-detail--img {
   --img-size: 400px;
   position: absolute;
   left: 35%;
@@ -25,8 +28,9 @@
   transition: opacity 0.3s;
 }
 
-.landing--container-left {
+.project-detail--container-left {
   flex: 35%;
+  min-width: 100px;
   height: 100%;
   display: flex;
   align-items: flex-end;
@@ -41,19 +45,19 @@
   justify-content: flex-start;
 }
 
-.landing--social {
+.project-detail--social {
   font-size: 35px;
   margin: 0 1rem;
   transition: transform 0.5s;
 }
 
-.landing--social:hover {
+.project-detail--social:hover {
   transform: scale(1.2);
 }
 
-.landing--container-right {
+.project-detail--container-right {
   flex: 65%;
-  height: 100vh;
+  height: 100%; 
   background-color: #eaeaea;
   display: flex;
   flex-direction: column;
@@ -66,6 +70,8 @@
   margin-right: 7rem;
   font-family: var(--primaryFont);
   font-style: normal;
+  display: flex;
+  flex-direction: column;
 }
 
 .lcr--content h6 {
@@ -99,7 +105,7 @@
 }
 
 @media (max-width: 1100px) {
-  .landing--img {
+  .project-detail--img {
     --img-size: 350px;
   }
   .lcl--content {
@@ -131,11 +137,11 @@
 }
 
 @media (max-width: 900px) {
-  .landing--img {
+  .project-detail--img {
     --img-size: 300px;
   }
 
-  .landing--social {
+  .project-detail--social {
     font-size: 30px;
   }
   .lcr--content {
@@ -157,26 +163,26 @@
 }
 
 @media (max-width: 600px) {
-  .landing--container {
+  .project-detail--container {
     flex-direction: column;
     justify-content: space-between;
   }
-  .landing--img {
+  .project-detail--img {
     --img-size: 200px;
     left: 50%;
     top: 30%;
     border: 8px solid #eaeaea;
     transform: translate(-50%, -50%);
   }
-  .landing--container-left {
+  .project-detail--container-left {
     flex: initial;
     width: 100%;
     height: 30%;
   }
-  .landing--social {
+  .project-detail--social {
     display: none;
   }
-  .landing--container-right {
+  .project-detail--container-right {
     box-sizing: border-box;
     padding: 0 2rem;
     flex: initial;
@@ -229,11 +235,11 @@
 }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-device-pixel-ratio: 2) and (device-aspect-ratio: 2/3) {
-  .landing {
+  .project-detail {
     height: 100%;
   }
 
-  .landing--img {
+  .project-detail--img {
     --img-size: 150px;
     left: 50%;
     top: 20%;
