--- a/src/pages/ProjectDetail/projectDetail.css
+++ b/src/pages/ProjectDetail/projectDetail.css
@@ -1,8 +1,8 @@
 .project-detail {
+  display: flex;
   align-items: center;
   justify-content: center;
-  display: flex;
-  flex: 100%;
+
 }
 
 .project-detail--container {
@@ -12,7 +12,8 @@
   justify-content: center;
   height: 100%;
   position: relative;
-  display: flex;
+  
+  
 }
 
 .project-detail--img {
@@ -30,14 +31,15 @@
 
 .project-detail--container-left {
   flex: 35%;
-  min-width: 100px;
   height: 100%;
   display: flex;
   align-items: flex-end;
   justify-content: flex-start;
+  
 }
 
 .lcl--content {
+  
   margin: 3rem;
   width: 100%;
   display: flex;
@@ -56,13 +58,14 @@
 }
 
 .project-detail--container-right {
+  
   flex: 65%;
-  height: 100%; 
-  background-color: #eaeaea;
+  min-height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   justify-content: center;
+  
 }
 
 .lcr--content {
@@ -70,8 +73,7 @@
   margin-right: 7rem;
   font-family: var(--primaryFont);
   font-style: normal;
-  display: flex;
-  flex-direction: column;
+  padding: 50px;
 }
 
 .lcr--content h6 {
