--- a/src/pages/ProjectDetail/projectDetail.css
+++ b/src/pages/ProjectDetail/projectDetail.css
@@ -35,6 +35,7 @@
   display: flex;
   align-items: flex-end;
   justify-content: flex-start;
+  min-height: 300px;
   
 }
 
@@ -60,7 +61,7 @@
 .project-detail--container-right {
   
   flex: 65%;
-  min-height: 90vh;
+  min-height: 76vh;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
