--- a/src/pages/Blog/BlogDetail/blogDetail.css
+++ b/src/pages/Blog/BlogDetail/blogDetail.css
@@ -171,11 +171,16 @@
     justify-content: space-between;
   }
   .blog-detail--img {
-    --img-size: 200px;
+    
     left: 50%;
     top: 30%;
     border: 8px solid #eaeaea;
     transform: translate(-50%, -50%);
+  }
+
+  .blog-detail--img img{
+    background-color: "#fff";
+    object-fit: "contain";
   }
   .blog-detail--container-left {
     flex: initial;
