--- a/src/components/Clients/Clients.css
+++ b/src/components/Clients/Clients.css
@@ -1,10 +1,10 @@
-.clients {
+
+
+.clients > div {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    min-height: 60vh;
-    padding: 2.5rem 2rem 2rem 2rem;
+    padding-left: 100px;
+    padding-right: 100px;
 }
 
 .client--name{
@@ -21,12 +21,6 @@
     max-width: 200px;
     justify-content: center;
     align-items: center;
-}
-
-.clientsHeader {
-    display: flex;
-    align-items: center;
-    justify-content: center; 
 }
 
 .clientsHeader h2 {
@@ -78,7 +72,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 2rem 1rem;
+  
     transition: 300ms ease-in-out;
 }
 
