--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,10 +1,10 @@
 .footer {
     font-family: 'var(--primaryFont)', sans-serif;
-    height: 60px;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-bottom: 100px;
 }
 
 .footer p {
@@ -15,4 +15,15 @@
 
 .footer p span {
     font-size: 24px;
+}
+
+.footer--img {
+  --img-size: 40px;
+  transform: translateX(-50%);
+  width: var(--img-size);
+  height: var(--img-size);
+  object-fit: cover;
+  border-radius: 50%;
+  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.2);
+  transition: opacity 0.3s;
 }
