--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -2,9 +2,9 @@
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: flex-start;
-    padding: 3.7rem;
+    padding: 1.2rem;
 }
 
 .services-header {
@@ -21,8 +21,8 @@
 }
 
 .services-image > img{
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding-top: 1.2rem;
+    padding-bottom: 1.2rem;
     max-width: 100%;
     max-height: 100%;
 }
@@ -36,7 +36,7 @@
 .services-body {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: flex-start;
     margin-bottom: 2rem;
 }
@@ -45,7 +45,6 @@
     font-family: var(--primaryFont);
     font-weight: 400;
     font-size: 1.5rem;
-    width: 60%;
     text-align: center;
     margin-bottom: 6rem;
 }
