--- a/src/components/Contacts/Contacts.css
+++ b/src/components/Contacts/Contacts.css
@@ -34,13 +34,22 @@
 
 }
 
+.contacts--container > p{
+     font-size: 16px;
+    font-family: var(--primaryFont);
+}
+
+
 .contacts-body {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     justify-content: flex-start;
     width: 100%;
+    padding-top: 20px;
 }
+
+
 
 .contacts-form {
     display: flex;
