--- a/src/components/Blog/SingleBlog/SingleBlog.css
+++ b/src/components/Blog/SingleBlog/SingleBlog.css
@@ -10,7 +10,7 @@
 
 .singleBlog--image {
   
-    filter: grayscale(1);
+    /* filter: grayscale(1); */
     height: 50%;
     width: 100%;
     overflow: hidden;
@@ -25,7 +25,7 @@
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     transition: transform 1s, filter 2s ease-in-out;
-    filter: blur(1px);
+    /* filter: blur(1px); */
     transform: scale(1.3);
 }
 
