--- a/src/components/PageDetail/pageDetail.css
+++ b/src/components/PageDetail/pageDetail.css
@@ -1,11 +1,11 @@
-.project-detail {
+.page-detail {
   display: flex;
   align-items: center;
   justify-content: center;
 
 }
 
-.project-detail--container {
+.page-detail--container {
   display: flex;
   flex: 100%;
   align-items: center;
@@ -16,7 +16,7 @@
   
 }
 
-.project-detail--img {
+.page-detail--img {
   --img-size: 400px;
   position: absolute;
   left: 35%;
@@ -29,7 +29,7 @@
   transition: opacity 0.3s;
 }
 
-.project-detail--container-left {
+.page-detail--container-left {
   flex: 35%;
   height: 100%;
   display: flex;
@@ -48,17 +48,17 @@
   justify-content: flex-start;
 }
 
-.project-detail--social {
+.page-detail--social {
   font-size: 35px;
   margin: 0 1rem;
   transition: transform 0.5s;
 }
 
-.project-detail--social:hover {
+.page-detail--social:hover {
   transform: scale(1.2);
 }
 
-.project-detail--container-right {
+.page-detail--container-right {
   
   flex: 65%;
   min-height: 76vh;
@@ -108,7 +108,7 @@
 }
 
 @media (max-width: 1100px) {
-  .project-detail--img {
+  .page-detail--img {
     --img-size: 350px;
   }
   .lcl--content {
@@ -140,11 +140,11 @@
 }
 
 @media (max-width: 900px) {
-  .project-detail--img {
+  .page-detail--img {
     --img-size: 300px;
   }
 
-  .project-detail--social {
+  .page-detail--social {
     font-size: 30px;
   }
   .lcr--content {
@@ -166,26 +166,26 @@
 }
 
 @media (max-width: 600px) {
-  .project-detail--container {
+  .page-detail--container {
     flex-direction: column;
     justify-content: space-between;
   }
-  .project-detail--img {
+  .page-detail--img {
     --img-size: 200px;
     left: 50%;
     top: 30%;
     border: 8px solid #eaeaea;
     transform: translate(-50%, -50%);
   }
-  .project-detail--container-left {
+  .page-detail--container-left {
     flex: initial;
     width: 100%;
     height: 30%;
   }
-  .project-detail--social {
+  .page-detail--social {
     display: none;
   }
-  .project-detail--container-right {
+  .page-detail--container-right {
     box-sizing: border-box;
     padding: 0 2rem;
     flex: initial;
@@ -238,11 +238,11 @@
 }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-device-pixel-ratio: 2) and (device-aspect-ratio: 2/3) {
-  .project-detail {
+  .page-detail {
     height: 100%;
   }
 
-  .project-detail--img {
+  .page-detail--img {
     --img-size: 150px;
     left: 50%;
     top: 20%;
