--- a/src/components/Clients/Clients.css
+++ b/src/components/Clients/Clients.css
@@ -3,8 +3,8 @@
 .clients > div {
     display: flex;
     flex-direction: column;
-    padding-left: 100px;
-    padding-right: 100px;
+    padding-left: 1.2rem;
+    padding-right: 1.2rem;
 }
 
 .client--name{
