--- a/src/components/Contacts/Contacts.css
+++ b/src/components/Contacts/Contacts.css
@@ -1,5 +1,4 @@
 .contacts {
-    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -19,8 +18,8 @@
 .contacts--container {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
+    align-items:center;
+    justify-content: center;
     padding: 2rem 6rem 3rem;
     width: 80%;
     height: 100%;
