--- a/src/components/BackToTop/BackToTop.css
+++ b/src/components/BackToTop/BackToTop.css
@@ -1,7 +1,7 @@
 .backToTop {
     position: fixed; 
-    right: 10px;
-    bottom: 90px;
+    right: 50%;
+    bottom: 50px;
     height: 30px;
     font-size: 3rem;
     z-index: 999;
@@ -17,8 +17,6 @@
 
 @media screen and (max-width: 800px) {
     .backToTop { 
-        right: -10px;
-        bottom: 50px;
         font-size: 2.75rem;
     }
 }
