--- a/src/components/Projects/SingleProject/SingleProject.css
+++ b/src/components/Projects/SingleProject/SingleProject.css
@@ -38,7 +38,9 @@
 .projectContent > img {
     /* width: 100%; */
     /* height: 65%; */
-    height: 80%;
+    object-fit: cover;
+    height: 250px;
+    width: 310px;
     flex:60%;
     transition: opacity 0.7s 0.3s;
     
