--- a/src/components/Projects/SingleProject/SingleProject.css
+++ b/src/components/Projects/SingleProject/SingleProject.css
@@ -11,6 +11,7 @@
     position: relative;
     cursor: pointer;
     overflow: hidden;
+    letter-spacing: 1px;
 }
 
 .grayScale {
@@ -35,9 +36,19 @@
     text-align: center;
 }
 
+.projectContent > h3 {
+    font-family: var(--primaryFont);
+    font-style: normal;
+    font-weight: 600;
+    line-height: 190%;
+    text-align: center;
+}
+
 .projectContent > img {
     /* width: 100%; */
     /* height: 65%; */
+    border-top: 1px solid #000;
+    border-bottom: 1px solid #000;
     object-fit: cover;
     height: 250px;
     width: 310px;
