--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -7,6 +7,7 @@
   }
 
 .experience{
+    padding: 0px 20px;
     min-height: 50vh;
     font-family: var(--primaryFont);
     min-height: 100vh;
@@ -14,7 +15,7 @@
 }
 
 .experience-body {
-    padding: 0px 1.2rem;
+   
     display: flex;
     flex-direction: row;
     align-items: flex-start;
