--- a/src/components/Projects/SingleProject/SingleProject.css
+++ b/src/components/Projects/SingleProject/SingleProject.css
@@ -66,7 +66,7 @@
 .project--showcaseBtn {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     width: 100%;
 }
 
