--- a/src/components/Video/Video.css
+++ b/src/components/Video/Video.css
@@ -1,8 +1,26 @@
+
+
 .container {
   position: relative;
   overflow: hidden;
   width: 100vw;
   height: 100vh;
+}
+
+.container video {
+  /* Make video to at least 100% wide and tall */
+  min-width: 100%; 
+  min-height: 100%; 
+
+  /* Setting width & height to auto prevents the browser from stretching or squishing the video */
+  width: auto;
+  height: auto;
+
+  /* Center the video */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
 }
 
 
