--- a/src/pages/Blog/BlogDetail/blogDetailBody.css
+++ b/src/pages/Blog/BlogDetail/blogDetailBody.css
@@ -37,6 +37,7 @@
   padding: 20px;
   max-width: 80%;
   width: 100%;
+  height: auto;
   display: block;
   margin-left: auto;
   margin-right: auto;
