--- a/src/components/Clients/Clients.css
+++ b/src/components/Clients/Clients.css
@@ -7,6 +7,18 @@
     padding-right: 20px;
 }
 
+
+.clients-image {
+    width: 120px;
+}
+
+.clients-image-inverted {
+    width: 120px;
+    -webkit-filter: invert(.75); /* safari 6.0 - 9.0 */
+          filter: invert(.75);
+}
+
+
 .client--name{
     justify-content: center;
     align-items: center;
