--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -21,6 +21,7 @@
     align-items: flex-start;
     justify-content: space-around;
     height: fit-content;
+    padding: 50px;
 }
 
 .experience-body > div{
