--- a/src/pages/Project/CaseStudy/caseStudy.css
+++ b/src/pages/Project/CaseStudy/caseStudy.css
@@ -25,11 +25,10 @@
    line-height: 2.5rem;
   padding-top: 40px;
   padding-bottom: 20px;
-  color: rgb(234, 234, 234);
+   text-align:center;
 }
 
 .caseStudy a {
-  color: rgb(222, 74, 66);
   text-decoration: underline;
 }
 
