--- a/src/pages/Project/CaseStudy/caseStudy.css
+++ b/src/pages/Project/CaseStudy/caseStudy.css
@@ -25,17 +25,21 @@
    line-height: 2.5rem;
   padding-top: 40px;
   padding-bottom: 20px;
-   text-align:center;
+   text-align:left;
+      font-size: 3.5rem;
+   
 }
 
 .caseStudy a {
+  color: rgb(222, 74, 66);
   text-decoration: underline;
 }
 
 .caseStudy img {
+  object-fit: contain;
   padding: 20px;
-  max-width: 80%;
-  width: 100%;
+  max-width: 80vw;
+  max-height: 80vh;
   display: block;
   margin-left: auto;
   margin-right: auto;
